Adding looping through dictionaries.

--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "<!-- Teach what an iterator is? -->\n",
     "\n",
-    "A **for loop** goes through a sequence (i.e. a list, string, or tuple) one item at a time. For each item it reaches, a variable gets assigned the value of that item, and a block of code gets repeated. The code block stops repeating once every item in the sequence is reached.\n",
+    "A **for loop** goes through a collection (list, string, tuple, dictionary, etc.) one item at a time. For each item it reaches, a variable gets assigned the value of that item, and a block of code gets repeated. The code block stops repeating once every item in the sequence is reached. The process of taking each item from a collection one at a time like this is called **iteration**.\n",
     "\n",
     "Here is how to write a for-loop:\n",
     "\n",
@@ -40,14 +40,14 @@
     "    # You can have as many lines of code here as you want.\n",
     "```\n",
     "\n",
-    "In the code above, `current_item` is a variable that will keep changing as Python moves through the sequence. `current_item` can be named whatever you'd like, but here I chose the name `current_item` to make it clear that this variable is always storing the current item we have reached in the sequence.\n",
+    "In the code above, `current_item` is a variable that will keep changing as Python iterates through the collections. `current_item` can be named whatever you'd like, but here I chose the name `current_item` to make it clear that this variable is always storing the current item we have reached in the collection.\n",
     "\n",
     "To demonstrate how a for-loop works, here's an example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
    ],
    "source": [
     "# Here, some_sequence is the list [\"red\", \"blue\", \"green\", \"purple\"]. \n",
-    "# The variable `color` will store the current item we are up to in the sequence.\n",
+    "# The variable `color` will store the current item we are up to in the collection.\n",
     "for color in [\"red\", \"blue\", \"green\", \"purple\"]:\n",
     "    # After all this indented code finishes running, `color` will get set to the next element.\n",
     "    print(f\"Right now, the variable named `color` equals {color}\")\n",
@@ -78,16 +78,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the code above, we are iterating over the sequence `[\"red\", \"blue\", \"green\", \"purple\"]`. The variable `color` first gets set to the first element of the list, \"red\", and then the indented code runs with the variable equal to \"red\". The code then loops, changing `color` to equal the next element in the list, \"blue\". \n",
+    "In the code above, we are iterating over the collection `[\"red\", \"blue\", \"green\", \"purple\"]`. The variable `color` first gets set to the first element of the list, \"red\", and then the indented code runs with the variable equal to \"red\". The code then loops, changing `color` to equal the next element in the list, \"blue\". \n",
     "\n",
-    "Next, let's try a for-loop where the sequence is a string.\n",
+    "Next, let's try a for-loop where the collection is a string.\n",
     "\n",
-    "As a reminder, strings are sequences of characters. For example, in the string \"Hi, bye\", the elements are the characters `\"H\"`, `\"i\"`, `\",\"`, `\" \"`, `\"b\"`, `\"y\"`, and `\"e\"`."
+    "As a reminder, strings are collections of characters. For example, in the string \"Hi, bye\", the elements are the characters `\"H\"`, `\"i\"`, `\",\"`, `\" \"`, `\"b\"`, `\"y\"`, and `\"e\"`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
     "# Loop through the sequence \"Hello, class!\". \n",
     "# Reminder: In strings, each character is its own element. \n",
     "for char in \"Hello, class!\":\n",
-    "    # Display the character we are up to in the sequence.\n",
+    "    # Display the character we are up to in the collection.\n",
     "    print(f\"The current character in the string is: {char}\")"
    ]
   },
@@ -122,14 +122,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code block can contain as many lines of code as it needs. The variable will only change after the loop finishes running the indented code. Then, after the variable changes, the code block will run again (and again, and again, until the sequence is over).\n",
+    "The code block can contain as many lines of code as it needs. The variable will only change after the loop finishes running the indented code. Then, after the variable changes, the code block will run again (and again, and again, until the collection is over).\n",
     "\n",
     "We can see an example of this below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "# Create the sequence we will loop through.\n",
+    "# Create the collection we will loop through.\n",
     "cousin_ages = [12, 15, 28, 39]\n",
     "# Save my age in a variable so we can access it later in the code.\n",
     "my_age = 24\n",
@@ -176,7 +176,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the examples above, we always displayed the variable. However, this isn't a requirement, as shown below."
+    "If each element in the collection is a collection itself, we can use tuple unpacking and assign multiple variables at once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Without tuple unpacking:\n",
+      "('John', 'Samantha')\n",
+      "('Billy', 'Lily')\n",
+      "('Charlie', 'Lola')\n",
+      "\n",
+      "With tuple unpacking, we can seperate each of those tuples:\n",
+      "The brother is John and the sister is Samantha.\n",
+      "The brother is Billy and the sister is Lily.\n",
+      "The brother is Charlie and the sister is Lola.\n"
+     ]
+    }
+   ],
+   "source": [
+    "siblings = [(\"John\", \"Samantha\"), (\"Billy\", \"Lily\"), (\"Charlie\", \"Lola\")]\n",
+    "\n",
+    "print(\"Without tuple unpacking:\")\n",
+    "for bro_sis in siblings:\n",
+    "    print(bro_sis)\n",
+    "\n",
+    "# Add empty line to seperate examples.\n",
+    "print()\n",
+    "\n",
+    "print(\"With tuple unpacking, we can seperate each of those tuples:\")\n",
+    "for brother, sister in siblings:\n",
+    "    print(f\"The brother is {brother} and the sister is {sister}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterating through a dict only loops through the keys. Luckily, we can access the values in a dictionary if we have the key. \n",
+    "\n",
+    "As a reminder, we can access the value at a given key in a dictionary using this syntax: `dict_name[key]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loop through a dictionary. Note how we only see the keys.\n",
+      "breakfast\n",
+      "lunch\n",
+      "dinner\n",
+      "\n",
+      "This time, let's use each key to access the values.\n",
+      "I'll eat eggs for breakfast.\n",
+      "I'll eat bagel for lunch.\n",
+      "I'll eat soup for dinner.\n"
+     ]
+    }
+   ],
+   "source": [
+    "meals = {\"breakfast\": \"eggs\", \"lunch\": \"bagel\", \"dinner\": \"soup\"}\n",
+    "\n",
+    "print(\"Loop through a dictionary. Note how we only see the keys.\")\n",
+    "for curr_meal in meals:\n",
+    "    print(curr_meal)\n",
+    "    \n",
+    "\n",
+    "print()\n",
+    "print(\"This time, let's use each key to access the values.\")\n",
+    "for curr_meal in meals:\n",
+    "    # Use the key to access the value.\n",
+    "    print(f\"I'll eat { meals[curr_meal] } for {curr_meal}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, we can loop through the key and value together by using the dictionary method `.items()`. This method returns each key:value pair within tuples. We can then use tuple unpacking to get the key and value from these tuples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('breakfast', 'eggs'), ('lunch', 'bagel'), ('dinner', 'soup')])\n",
+      "\n",
+      "Now let's loop through the key and values together by unpacking those tuples.\n",
+      "I'll eat eggs for breakfast.\n",
+      "I'll eat bagel for lunch.\n",
+      "I'll eat soup for dinner.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display the key:value pairs as tuples.\n",
+    "print(meals.items())\n",
+    "print()\n",
+    "\n",
+    "print(\"Now let's loop through the key and values together by unpacking those tuples.\")\n",
+    "for curr_meal, food in meals.items():\n",
+    "    print(f\"I'll eat {food} for {curr_meal}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the examples above, we always displayed the variables. However, this isn't a requirement, as shown below."
    ]
   },
   {
@@ -219,7 +342,7 @@
    "source": [
     "The code block above ran four times, since the variable got changed four times.\n",
     "\n",
-    "When we just want a block of code to run a given number of times, we can use the `range()` function as our sequence. The `range()` function returns a sequence that starts at 0 by default and stops before the number you pass it as an argument."
+    "When we just want a block of code to run a given number of times, we can use the `range()` function. The `range()` function returns a sequence that starts at 0 by default and stops before the number you pass it as an argument."
    ]
   },
   {
@@ -553,12 +676,12 @@
    "metadata": {},
    "source": [
     "### Continue\n",
-    "The keyword `continue` makes the code current code stop before reaching the end, but continues the loop."
+    "The keyword `continue` makes the code current iteration stop before reaching the end, but continues the loop."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
