Added more fundamentals, like the `in` keyword.

--- a/Python Fundamentals.ipynb
+++ b/Python Fundamentals.ipynb
@@ -13,9 +13,11 @@
    "id": "94cf9269-5788-4600-abed-73041a926d2e",
    "metadata": {},
    "source": [
-    "Python is an object-oriented programming (OOP) language. Everything in Python (apart from keywords like `if` and `def`) is an object. If you type the number 5 or the text \"hello\", both of those are creating an object. So what is an object?\n",
+    "Python is an object-oriented programming (OOP) language. Everything in Python (apart from keywords like `if` and `def`) is an object. If you type the number 5, the text \"hello\", or define a functions, all of those are creating an object. So what is an object?\n",
     "\n",
     "An object is something with attributes. These attributes include data about the object (such as their value and the type of object they are, like numbers or text) and things you can do with that object (such as whether you can add them together or find their length).\n",
+    "\n",
+    "The syntax to access an object's attributes is `object_name.attribute_name`. Attributes that do things with the object are called `methods`, and must be followed by parentheses, like so: `object_name.method_name()`.\n",
     "\n",
     "Objects are stored in your computer's memory as a bunch of 0s and 1s. "
    ]
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "id": "ec0de2d0-2929-44d9-95c3-bf8aa8660f7d",
    "metadata": {},
    "outputs": [
@@ -434,20 +436,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc45077a-d10e-4f3c-b6a6-d19405e69147",
+   "id": "6d96b1cc-5742-499f-8c22-b9f62393de07",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Sequences"
+    "## Iterators"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d94cf915-7ed1-460d-a5c0-3d88129d1f9c",
+   "id": "9dd78db6-c164-42ca-b3db-b63ed4a203f9",
    "metadata": {},
    "source": [
-    "Sequences are objects that store ordered collections of data. Python has three main sequence data types: strings, lists, and tuples."
+    "<!-- Some objects contain multiple values within them. These are called collections. -->\n",
+    "\n",
+    "**Iterators** (sometimes called **collections**) are objects that contain multiple items within them, called their elements. These elements can be iterated over, which means that their values can be accessed one at a time. The following are iterators:"
    ]
   },
   {
@@ -469,13 +473,19 @@
     "\n",
     "Examples of strings include `'Hello'`, `\"I am 3!\"`, and even the empty string `\"\"`.\n",
     "\n",
-    "A string is a sequence of characters. In the string `\"Hi Bye\"`, the first character in the sequence is `\"H\"`, the next is `\"i\"`, then `\" \"`, then `\"B\"`, up until the final character in the sequence, `\"e\"`."
+    "The elements within a string are its **characters**. A character is a string of length 1. For example, `\"H\"` is a character, and so is `\":\"` and `\" \"`. \n",
+    "\n",
+    "Below, we can see all the elements in the string `\"blue, purple\"`:\n",
+    "\n",
+    "\n",
+    "<!-- \n",
+    "A string is a sequence of characters. In the string `\"Hi Bye\"`, the first character in the sequence is `\"H\"`, the next is `\"i\"`, then `\" \"`, then `\"B\"`, up until the final character in the sequence, `\"e\"`. -->"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "51a3ecbb-a710-41c2-9e26-0b0516dca5eb",
+   "execution_count": 43,
+   "id": "40e3a319-c63e-42bb-9c3c-dd1f77dd8541",
    "metadata": {},
    "outputs": [
     {
@@ -488,8 +498,16 @@
    ],
    "source": [
     "# See a list of all the characters in the string \"blue, purple\":\n",
-    "print(list(\"blue, purple\"))\n",
-    "\n",
+    "print(list(\"blue, purple\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "51a3ecbb-a710-41c2-9e26-0b0516dca5eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Which of the following evaluate to type `str`? Uncomment one at a time:\n",
     "# print(type(\"I'm batman.\"))\n",
     "# print(type(hello))\n",
@@ -650,6 +668,8 @@
     "### Sequence Features\n",
     "<!-- Sequences  -->\n",
     "<!-- All sequence objects can be indexed and sliced. -->\n",
+    "\n",
+    "All the above iterators (strings, lists, and tuples) were sequences. A sequence is an iterator where each of the elements are ordered and can be accessed by their position.\n",
     "\n",
     "Sequences in Python are zero-indexed, which means that the first element is at index 0, the second element at index 1, etc.\n",
     "\n",
@@ -1069,23 +1089,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be47a899-5551-4353-9b87-2c4c33556fb9",
+   "id": "11d0fe1f-2c58-4f70-8ae8-ac5498efa6fc",
    "metadata": {},
    "source": [
-    "## Other Collections\n",
-    "Sequences are ordered collections of data, which allows them to be accessed by their index. However, not all collections can have their elements accessed by their index. Two collections that aren't sequences are sets and dictionaries.\n",
-    "<!-- \n",
-    "Below are two collections:\n",
-    "\n",
-    "Some data types don't store an order at all. Two examples of unordered collections are sets and dictionaries. -->\n",
-    "<!-- \n",
-    "When you create a string, for example, the characters are all order\n",
-    "\n",
-    "\n",
-    "order of the characters \n",
-    "\n",
-    "order you originally type the characters in is \n",
-    "Dictionaries (dict) -->"
+    "Not all iterators are sequences. Below, we will explore two iterators that aren't sequences (meaning their elements cannot be accessed through indexing). These iterators are **sets** and **dictionaries**."
    ]
   },
   {
@@ -1101,27 +1108,75 @@
    "id": "3df08848-f169-490c-ba21-1d2b6bd21ab2",
    "metadata": {},
    "source": [
-    "Similarly to lists and tuples, a set is an object that can store multiple objects within it. However, objects in sets must be immutable. The objects within a set are written between curly brackets (`{` and `}`) and are seperated by commas.\n",
+    "Similarly to lists and tuples, a set is an object that can store multiple objects within it. The objects within a set are written between curly brackets (`{` and `}`) and are seperated by commas.\n",
     "\n",
-    "Sets are unordered, which means that the order you type the elements in doesn't matter. They also do not contain any duplicates, so even if you add the same element several times, it will only be stored once in the set.\n",
-    "<!-- \n",
-    "\n",
-    "\n",
-    "A set is an unordered collection which contains no duplicates. Sets are created by typing the objects they contain seperated by commas within curly braces,\n",
-    "\n",
-    "A list is an object that can store multiple objects within it. The objects within a list are written between square brackets ([ and ]) and are seperated by commas. -->"
+    "Sets are unordered, which means that the order you type the elements in doesn't matter. They also do not contain any duplicates, so even if you add the same element several times, it will only be stored once in the set. Objects in sets must be immutable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1eec5187-8882-4b13-af30-4917a7bd1f88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{8, 1, 2, 3}\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a set with duplicates.\n",
-    "example_set = {2, 2, 1, 3}\n",
+    "example_set = {2, 2, 1, 3, 8}\n",
     "# Print the set. Note how the order changed and all duplicates were removed.\n",
+    "print(example_set)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e99439d-bec1-48ce-b7e2-362d3019e14c",
+   "metadata": {},
+   "source": [
+    "Sets are mutable. We can add elements to a set using the set `.add()` method and remove them using the `.remove()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f0cc016a-ef1e-4a7c-aad9-5c14d0ea9b85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The set originally looks like this:\n",
+      "{8, 1, 2, 3}\n",
+      "\n",
+      "Let's add a 7 to the set.\n",
+      "{1, 2, 3, 7, 8}\n",
+      "\n",
+      "Now let's remove the 2 from the set.\n",
+      "{1, 3, 7, 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "example_set = {2, 1, 3, 8}\n",
+    "print(\"The set originally looks like this:\")\n",
+    "print(example_set)\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "print(\"Let's add a 7 to the set.\")\n",
+    "example_set.add(7)\n",
+    "print(example_set)\n",
+    "print()\n",
+    "\n",
+    "print(\"Now let's remove the 2 from the set.\")\n",
+    "example_set.remove(2)\n",
     "print(example_set)"
    ]
   },
@@ -1138,7 +1193,7 @@
    "id": "b78fc23b-5044-4e3f-8ef2-1e26ff7d448f",
    "metadata": {},
    "source": [
-    "A dictionary (shortened to `dict` in Python) is an object type that stores data in key:value pairs.\n",
+    "A dictionary (shortened to `dict` in Python) is a mutable iterator that stores data in key:value pairs.\n",
     "\n",
     "<!-- \n",
     "Much like you can get the value at index 0 of a string  -->\n",
@@ -1153,10 +1208,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "7d296ec4-7b8b-4b08-bc58-ac24cac23df6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "black\n",
+      "24\n"
+     ]
+    }
+   ],
    "source": [
     "person_info = {\"name\": \"Sawyer\", \"age\": 24, \"favorite color\": \"black\"}\n",
     "\n",
@@ -1175,10 +1239,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "ddf3011d-2aaa-48e6-a793-b97602a93a8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a dictionary where the keys are numbers and the values are the letters they secretly mean.\n",
     "secret_message_dict = {18: \"o\", 1: \"H\", 22: \"r\", 5: \"l\", 23: \"e\", 42: \"x\"}\n",
@@ -1193,17 +1269,144 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cde176d-40ea-42f4-828b-de0b1bef1dba",
+   "id": "f2276137-9392-43b2-952e-46706badcaf1",
    "metadata": {},
    "source": [
-    "We can get the length of all collection objects with the `len()` function. \n",
-    "\n",
-    "The `len()` function returns the number of items the collection contains. In the case of a dictionary, the function returns how many keys it contains. Note that sets remove duplicates, so adding the same element multiple times to a set will not increase the set's length."
+    "Dictionaries are mutable. You can add a key:value pair to a dictionary by using this syntax: `dict_name[new_key] = new_value`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "aa7e1075-d411-440e-bb2e-81f61188b197",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Gabe': '(555) 892-8924', 'James': '(363) 739-2803', 'Charles': '(532) 238-3490'}\n",
+      "\n",
+      "Let's add a new contact to the dictionary.\n",
+      "{'Gabe': '(555) 892-8924', 'James': '(363) 739-2803', 'Charles': '(532) 238-3490', 'Alec': '(924) 971-8836'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dict of people and their (made-up) phone numbers.\n",
+    "contacts = {\"Gabe\": \"(555) 892-8924\", \"James\": \"(363) 739-2803\", \"Charles\": \"(532) 238-3490\"}\n",
+    "print(contacts)\n",
+    "print()\n",
+    "\n",
+    "print(\"Let's add a new contact to the dictionary.\")\n",
+    "contacts[\"Alec\"] = \"(924) 971-8836\"\n",
+    "print(contacts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4cd363a-88c3-4082-9359-42c4ba1e2ed6",
+   "metadata": {},
+   "source": [
+    "<!-- We can also edit the value a key stores with the same syntax.  -->\n",
+    "If the key is already in the dictionary, doing this will instead overwrite the previous value and change it to the new one.\n",
+    "\n",
+    "<!-- If the key we use already exists in the dictionary, \n",
+    "\n",
+    "\n",
+    "this will instead change the value it stores to the new value. -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "06d19730-907b-44d4-a7e3-5c1b4b8cdbc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gabe's number was originally (555) 892-8924\n",
+      "If Gabe changes his number, we can change the value associated with the Gabe key.\n",
+      "\n",
+      "This is the dictionary with his new phone number.\n",
+      "{'Gabe': '(538) 890 - 2840', 'James': '(363) 739-2803', 'Charles': '(532) 238-3490'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "contacts = {\"Gabe\": \"(555) 892-8924\", \"James\": \"(363) 739-2803\", \"Charles\": \"(532) 238-3490\"}\n",
+    "\n",
+    "print(f\"Gabe's number was originally {contacts['Gabe']}\")\n",
+    "print(\"If Gabe changes his number, we can change the value associated with the Gabe key.\")\n",
+    "print()\n",
+    "\n",
+    "# Change the Gabe key's value.\n",
+    "contacts[\"Gabe\"] = \"(538) 890 - 2840\"\n",
+    "\n",
+    "print(\"This is the dictionary with his new phone number.\")\n",
+    "print(contacts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4693f259-9e2b-418d-8409-cb17e92ed708",
+   "metadata": {},
+   "source": [
+    "This did not create a second Gabe key because dictionary keys must be unique.\n",
+    "\n",
+    "We can also remove from a dict using the dictionary's `.pop()` method. The key we wish to delete must go within the parentheses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bbd118c7-1660-4479-846f-48c589385959",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's remove Gabe from out contacts.\n",
+      "Below is the new dictionary:\n",
+      "{'James': '(363) 739-2803', 'Charles': '(532) 238-3490'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "contacts = {\"Gabe\": \"(555) 892-8924\", \"James\": \"(363) 739-2803\", \"Charles\": \"(532) 238-3490\"}\n",
+    "\n",
+    "print(\"Let's remove Gabe from out contacts.\")\n",
+    "contacts.pop(\"Gabe\")\n",
+    "print(\"Below is the new dictionary:\")\n",
+    "print(contacts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc2b061d-6f19-4e4c-b640-5b263335a588",
+   "metadata": {},
+   "source": [
+    "### Iterator Features\n",
+    "Iterators share some common traits (more of which we will get into later)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cde176d-40ea-42f4-828b-de0b1bef1dba",
+   "metadata": {},
+   "source": [
+    "#### Finding Length\n",
+    "We can get the length of all iterators with the `len()` function. \n",
+    "\n",
+    "The `len()` function returns the number of elements the iterator contains. In the case of a dictionary, the function returns how many keys it contains."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "d1c6bf4c-2334-4ca3-b0b7-0803a416e1d5",
    "metadata": {},
    "outputs": [],
@@ -1224,11 +1427,90 @@
     "\n",
     "# Print the length of sets. Uncomment one at a time:\n",
     "# print(len({2, 4, 5}))\n",
-    "# print(len({4, 5, 1, 2, 1}))  \n",
+    "# print(len({4, 5, 1, 2, 1}))    # Remember, sets remove duplicates!\n",
     "\n",
     "# Print the length of dicts. Uncomment one at a time:\n",
     "# print(len({\"hour\": 2, \"minute\": 52, \"second\": 40}))\n",
     "# print(len({\"animal\": \"jellyfish\", \"fruit\": \"apple\", \"number\": 8}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "876b948b-ed73-4c2e-9e07-e31c96ed890c",
+   "metadata": {},
+   "source": [
+    "#### Checking membership"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5e0ddf8-cbc5-4341-a8ab-5587abd8f54a",
+   "metadata": {},
+   "source": [
+    "We can check if an element is a member of an collection by using the `in` keyword. (Using these on a dictionary only checks its keys.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2d231c9c-e81c-423e-af92-9a47b02967e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is 'laptop' in the list?\n",
+      "True\n",
+      "\n",
+      "Is 'banana' in the list?\n",
+      "False\n",
+      "\n",
+      "Is Gabe in the dictionary?\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "electronics = [\"laptop\", \"iPhone\", \"Android\", \"iPad\"]\n",
+    "print(\"Is 'laptop' in the list?\")\n",
+    "print(\"laptop\" in electronics)\n",
+    "print()\n",
+    "\n",
+    "print(\"Is 'banana' in the list?\")\n",
+    "print(\"banana\" in electronics)\n",
+    "print()\n",
+    "\n",
+    "contacts = {\"Gabe\": \"(555) 892-8924\", \"James\": \"(363) 739-2803\", \"Charles\": \"(532) 238-3490\"}\n",
+    "print(\"Is Gabe in the dictionary?\")\n",
+    "print(\"Gabe\" in contacts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7de254a9-5c5b-487d-b839-742520184581",
+   "metadata": {},
+   "source": [
+    "Similarly, we can use `not in` to check if an element is not in a collection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "cfc069d8-22da-4229-b864-328b942eac77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "electronics = [\"laptop\", \"iPhone\", \"Android\", \"iPad\"]\n",
+    "print(\"squid\" not in electronics)"
    ]
   }
  ],
